[gd_scene load_steps=4 format=3 uid="uid://h0ihmxkrapfx"]

[ext_resource type="Texture2D" uid="uid://cg4iyw4qlann" path="res://icon.svg" id="1_iatan"]
[ext_resource type="Script" path="res://dropOff.gd" id="2_xudh8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pnce5"]
radius = 12.3465

[node name="dropOff" type="Sprite2D"]
texture = ExtResource("1_iatan")
script = ExtResource("2_xudh8")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(5.84, 6.04)
shape = SubResource("CircleShape2D_pnce5")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
